Archive2/8c/2eb8c0ff1549df/output
main.cpp: In function 'int main()':
main.cpp:7:32: error: aggregate 'TypeDisplayer<const char*> t' has incomplete type and cannot be defined
     TypeDisplayer<decltype(d)> t;
                                ^
