Archive2/8c/2eb8c0ff1549df/main.cpp
template <class T>
class TypeDisplayer;

int main()
{
    auto d = "variable";
    TypeDisplayer<decltype(d)> t;
    
    return 0;
}